@@ -101,3 +101,10 @@
 {
 	font-style: italic;
 }
+
+.grid-view .filters input,
+.grid-view .filters select
+{
+	width: 100%;
+	border: 1px solid #ccc;
+}
